Implemented Task and user service

--- a/GL.ProjectManagement/GL.ProjectManagement.API/GL.ProjectManagement.API.csproj
+++ b/GL.ProjectManagement/GL.ProjectManagement.API/GL.ProjectManagement.API.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GL.ProjectManagement.Domain\GL.ProjectManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
