Implemented Generic Repository and genericCRUDController

--- a/GL.ProjectManagement/GL.ProjectManagement.API/GL.ProjectManagement.API.csproj
+++ b/GL.ProjectManagement/GL.ProjectManagement.API/GL.ProjectManagement.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GL.ProjectManagement.Domain\GL.ProjectManagement.Domain.csproj" />
+    <ProjectReference Include="..\GL.ProjectMangement.Repository\GL.ProjectMangement.Repository.csproj" />
   </ItemGroup>
 
 </Project>
