--- a/GL.ProjectManagement/GL.ProjectManagement.DataAccess/GL.ProjectManagement.DataAccess.csproj
+++ b/GL.ProjectManagement/GL.ProjectManagement.DataAccess/GL.ProjectManagement.DataAccess.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.11" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GL.ProjectManagement.Domain\GL.ProjectManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
