--- a/GL.ProjectManagement/GL.ProjectManagement.Test/GL.ProjectManagement.Test.csproj
+++ b/GL.ProjectManagement/GL.ProjectManagement.Test/GL.ProjectManagement.Test.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.22" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="WebMotions.Fake.Authentication.JwtBearer" Version="3.1.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
